frontend/tests/errors/ER-037/optional_block_ambiguous_not_swallowed/test.vx
&pick(x:#i32) -> #i32 {
  x
}

&pick(x:#u32) -> #u32 {
  x
}

&^main() -> #i32 {
  #{
    pick(1);
  }
  0
}
